[gd_scene load_steps=10 format=3 uid="uid://rk6tkiihhapc"]

[ext_resource type="Script" uid="uid://tu8h1mkwyruk" path="res://objetos/characters/evilNpc/evilNPC.gd" id="1_i2cga"]
[ext_resource type="Texture2D" uid="uid://b71st307vtk1v" path="res://sprites/characters/mundo 0/evil godot.jpeg" id="2_rbien"]

[sub_resource type="Animation" id="Animation_rjjjd"]
resource_name = "attack"
length = 0.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../EvilGodot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.189078, 0.208987), Vector2(0.286253, 0.155556)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pegar"
}]
}

[sub_resource type="Animation" id="Animation_iyvs0"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../EvilGodot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.189078, 0.240196)]
}

[sub_resource type="Animation" id="Animation_8mdte"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../EvilGodot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.189078, 0.208987), Vector2(0.189078, 0.240098), Vector2(0.189078, 0.208987)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_psosv"]
_data = {
&"attack": SubResource("Animation_rjjjd"),
&"default": SubResource("Animation_iyvs0"),
&"walk": SubResource("Animation_8mdte")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5x76"]
size = Vector2(34, 23.789)

[sub_resource type="CircleShape2D" id="CircleShape2D_gm2mo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oosj2"]
size = Vector2(55.1627, 41.8224)

[node name="EvilGodot" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_i2cga")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../InteractionArea/CollisionShape2D2")
libraries = {
&"": SubResource("AnimationLibrary_psosv")
}

[node name="EvilGodot" type="Sprite2D" parent="."]
position = Vector2(0, 4.54747e-13)
scale = Vector2(0.189078, 0.208987)
texture = ExtResource("2_rbien")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.145671)
scale = Vector2(0.756398, -1.24884)
shape = SubResource("RectangleShape2D_u5x76")

[node name="DetectionZone" type="Area2D" parent="."]
scale = Vector2(0.68, 0.600001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(0, 1)
scale = Vector2(-16.3302, -20.5218)
shape = SubResource("CircleShape2D_gm2mo")

[node name="InteractionArea" type="Area2D" parent="."]
scale = Vector2(1.03251, 1.23714)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-2.65548e-06, 0.257964)
scale = Vector2(0.737411, 0.915377)
shape = SubResource("RectangleShape2D_oosj2")

[connection signal="body_entered" from="DetectionZone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
